--- a/css/style.css
+++ b/css/style.css
@@ -620,12 +620,28 @@ video {
   right: 0px;
 }
 
+.-bottom-36 {
+  bottom: -9rem;
+}
+
+.top-1\/3 {
+  top: 33.333333%;
+}
+
+.left-5 {
+  left: 1.25rem;
+}
+
 .z-10 {
   z-index: 10;
 }
 
 .z-20 {
   z-index: 20;
+}
+
+.-z-10 {
+  z-index: -10;
 }
 
 .mx-auto {
@@ -665,28 +681,24 @@ video {
   height: 83.333333%;
 }
 
+.h-big {
+  height: 48rem;
+}
+
 .w-full {
   width: 100%;
 }
 
-.w-10 {
-  width: 2.5rem;
+.w-14 {
+  width: 3.5rem;
 }
 
 .w-6 {
   width: 1.5rem;
 }
 
-.w-1 {
-  width: 0.25rem;
-}
-
-.w-16 {
-  width: 4rem;
-}
-
-.w-14 {
-  width: 3.5rem;
+.w-big {
+  width: 48rem;
 }
 
 .cursor-pointer {
@@ -703,6 +715,20 @@ video {
 
 .gap-2 {
   gap: 0.5rem;
+}
+
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+
+.gap-y-2 {
+  row-gap: 0.5rem;
+}
+
+.gap-x-6 {
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
 }
 
 .space-x-10 > :not([hidden]) ~ :not([hidden]) {
@@ -723,6 +749,10 @@ video {
   margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .bg-darkred {
   --tw-bg-opacity: 1;
   background-color: rgb(158 101 109 / var(--tw-bg-opacity));
@@ -736,6 +766,11 @@ video {
 .bg-lightgreen {
   --tw-bg-opacity: 1;
   background-color: rgb(135 146 138 / var(--tw-bg-opacity));
+}
+
+.bg-darkgreen {
+  --tw-bg-opacity: 1;
+  background-color: rgb(44 58 44 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-t {
@@ -757,19 +792,9 @@ video {
   padding: 2.5rem;
 }
 
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
 }
 
 .text-center {
@@ -785,12 +810,25 @@ video {
   line-height: 2rem;
 }
 
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
 
 .font-light {
   font-weight: 300;
+}
+
+.font-medium {
+  font-weight: 500;
+}
+
+.font-normal {
+  font-weight: 400;
 }
 
 .uppercase {
@@ -812,12 +850,42 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.text-darkred {
+  --tw-text-opacity: 1;
+  color: rgb(158 101 109 / var(--tw-text-opacity));
+}
+
 .hover\:text-darkbeige:hover {
   --tw-text-opacity: 1;
   color: rgb(199 186 185 / var(--tw-text-opacity));
 }
 
+@media (min-width: 480px) {
+  .sm\:left-10 {
+    left: 2.5rem;
+  }
+
+  .sm\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .sm\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+}
+
 @media (min-width: 768px) {
+  .md\:left-1\/4 {
+    left: 25%;
+  }
+
   .md\:block {
     display: block;
   }
@@ -829,6 +897,16 @@ video {
   .md\:hidden {
     display: none;
   }
+
+  .md\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
+  .md\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -836,7 +914,31 @@ video {
     left: 0px;
   }
 
+  .lg\:left-5 {
+    left: 1.25rem;
+  }
+
+  .lg\:block {
+    display: block;
+  }
+
   .lg\:h-screen {
     height: 100vh;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:left-48 {
+    left: 12rem;
+  }
+
+  .xl\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
+  .xl\:text-8xl {
+    font-size: 6rem;
+    line-height: 1;
   }
 }
