--- a/css/style.css
+++ b/css/style.css
@@ -616,12 +616,16 @@ video {
   bottom: 0px;
 }
 
-.right-0 {
-  right: 0px;
+.right-20 {
+  right: 5rem;
 }
 
 .-bottom-36 {
   bottom: -9rem;
+}
+
+.right-0 {
+  right: 0px;
 }
 
 .top-1\/3 {
@@ -630,6 +634,14 @@ video {
 
 .left-5 {
   left: 1.25rem;
+}
+
+.top-20 {
+  top: 5rem;
+}
+
+.right-8 {
+  right: 2rem;
 }
 
 .z-10 {
@@ -642,6 +654,10 @@ video {
 
 .-z-10 {
   z-index: -10;
+}
+
+.m-auto {
+  margin: auto;
 }
 
 .mx-auto {
@@ -685,6 +701,12 @@ video {
   height: 48rem;
 }
 
+.h-fit {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
 .w-full {
   width: 100%;
 }
@@ -701,8 +723,22 @@ video {
   width: 48rem;
 }
 
+.w-1\/3 {
+  width: 33.333333%;
+}
+
+.w-fit {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .cursor-pointer {
   cursor: pointer;
+}
+
+.flex-col {
+  flex-direction: column;
 }
 
 .items-center {
@@ -713,17 +749,8 @@ video {
   justify-content: space-between;
 }
 
-.gap-2 {
-  gap: 0.5rem;
-}
-
-.gap-x-4 {
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
-}
-
-.gap-y-2 {
-  row-gap: 0.5rem;
+.gap-5 {
+  gap: 1.25rem;
 }
 
 .gap-x-6 {
@@ -753,6 +780,10 @@ video {
   border-radius: 9999px;
 }
 
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
 .bg-darkred {
   --tw-bg-opacity: 1;
   background-color: rgb(158 101 109 / var(--tw-bg-opacity));
@@ -768,9 +799,14 @@ video {
   background-color: rgb(135 146 138 / var(--tw-bg-opacity));
 }
 
-.bg-darkgreen {
+.bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(44 58 44 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-smokygreen {
+  --tw-bg-opacity: 1;
+  background-color: rgb(106 128 117 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-t {
@@ -792,9 +828,18 @@ video {
   padding: 2.5rem;
 }
 
+.p-6 {
+  padding: 1.5rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .text-center {
@@ -810,6 +855,11 @@ video {
   line-height: 2rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -823,12 +873,12 @@ video {
   font-weight: 300;
 }
 
-.font-medium {
-  font-weight: 500;
-}
-
 .font-normal {
   font-weight: 400;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .uppercase {
@@ -860,19 +910,42 @@ video {
   color: rgb(158 101 109 / var(--tw-text-opacity));
 }
 
+.text-gray-50 {
+  --tw-text-opacity: 1;
+  color: rgb(249 250 251 / var(--tw-text-opacity));
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:bg-lightgreen:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(135 146 138 / var(--tw-bg-opacity));
+}
+
 .hover\:text-darkbeige:hover {
   --tw-text-opacity: 1;
   color: rgb(199 186 185 / var(--tw-text-opacity));
 }
 
+@media (prefers-color-scheme: dark) {
+  .dark\:bg-smokypink {
+    --tw-bg-opacity: 1;
+    background-color: rgb(188 156 154 / var(--tw-bg-opacity));
+  }
+
+  .dark\:shadow-slate-600 {
+    --tw-shadow-color: #475569;
+    --tw-shadow: var(--tw-shadow-colored);
+  }
+}
+
 @media (min-width: 480px) {
   .sm\:left-10 {
     left: 2.5rem;
-  }
-
-  .sm\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
   }
 
   .sm\:text-5xl {
@@ -898,11 +971,6 @@ video {
     display: none;
   }
 
-  .md\:text-6xl {
-    font-size: 3.75rem;
-    line-height: 1;
-  }
-
   .md\:text-7xl {
     font-size: 4.5rem;
     line-height: 1;
@@ -922,6 +990,10 @@ video {
     display: block;
   }
 
+  .lg\:flex {
+    display: flex;
+  }
+
   .lg\:h-screen {
     height: 100vh;
   }
@@ -930,11 +1002,6 @@ video {
 @media (min-width: 1280px) {
   .xl\:left-48 {
     left: 12rem;
-  }
-
-  .xl\:text-7xl {
-    font-size: 4.5rem;
-    line-height: 1;
   }
 
   .xl\:text-8xl {
