--- a/css/style.css
+++ b/css/style.css
@@ -656,10 +656,6 @@ video {
   z-index: -10;
 }
 
-.z-30 {
-  z-index: 30;
-}
-
 .m-auto {
   margin: auto;
 }
@@ -672,30 +668,6 @@ video {
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
-}
-
-.-mr-10 {
-  margin-right: -2.5rem;
-}
-
-.-mr-20 {
-  margin-right: -5rem;
-}
-
-.-mr-0 {
-  margin-right: -0px;
-}
-
-.-mr-24 {
-  margin-right: -6rem;
-}
-
-.-mr-28 {
-  margin-right: -7rem;
-}
-
-.-mr-32 {
-  margin-right: -8rem;
 }
 
 .ml-6 {
@@ -748,20 +720,12 @@ video {
   height: 100%;
 }
 
-.h-1 {
-  height: 0.25rem;
-}
-
-.h-4\/5 {
-  height: 80%;
-}
-
 .h-1\.5 {
   height: 0.375rem;
 }
 
-.h-auto {
-  height: auto;
+.h-1 {
+  height: 0.25rem;
 }
 
 .w-full {
@@ -790,34 +754,6 @@ video {
   width: fit-content;
 }
 
-.w-screen {
-  width: 100vw;
-}
-
-.w-3 {
-  width: 0.75rem;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-72 {
-  width: 18rem;
-}
-
-.w-1\/2 {
-  width: 50%;
-}
-
-.w-2\/3 {
-  width: 66.666667%;
-}
-
-.w-3\/5 {
-  width: 60%;
-}
-
 .w-4\/5 {
   width: 80%;
 }
@@ -828,10 +764,6 @@ video {
 
 .w-5\/6 {
   width: 83.333333%;
-}
-
-.w-2\/5 {
-  width: 40%;
 }
 
 .cursor-pointer {
@@ -850,20 +782,12 @@ video {
   align-items: center;
 }
 
-.justify-center {
-  justify-content: center;
-}
-
 .justify-between {
   justify-content: space-between;
 }
 
 .gap-5 {
   gap: 1.25rem;
-}
-
-.gap-20 {
-  gap: 5rem;
 }
 
 .gap-10 {
@@ -895,10 +819,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
-}
-
-.overflow-hidden {
-  overflow: hidden;
 }
 
 .rounded-full {
@@ -934,31 +854,6 @@ video {
   background-color: rgb(106 128 117 / var(--tw-bg-opacity));
 }
 
-.bg-violet-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(237 233 254 / var(--tw-bg-opacity));
-}
-
-.bg-green-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 252 231 / var(--tw-bg-opacity));
-}
-
-.bg-slate-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
-}
-
-.bg-slate-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
-}
-
-.bg-stone-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 245 244 / var(--tw-bg-opacity));
-}
-
 .bg-stone-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(250 250 249 / var(--tw-bg-opacity));
@@ -969,11 +864,6 @@ video {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
-.bg-indigo-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(79 70 229 / var(--tw-bg-opacity));
-}
-
 .bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
@@ -981,54 +871,6 @@ video {
 .from-red-50 {
   --tw-gradient-from: #fef2f2;
   --tw-gradient-to: rgb(254 242 242 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-green-50 {
-  --tw-gradient-from: #f0fdf4;
-  --tw-gradient-to: rgb(240 253 244 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-green-100 {
-  --tw-gradient-from: #dcfce7;
-  --tw-gradient-to: rgb(220 252 231 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-lightgreen {
-  --tw-gradient-from: #87928A;
-  --tw-gradient-to: rgb(135 146 138 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-smokygreen {
-  --tw-gradient-from: #6a8075;
-  --tw-gradient-to: rgb(106 128 117 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-emerald-300 {
-  --tw-gradient-from: #6ee7b7;
-  --tw-gradient-to: rgb(110 231 183 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-teal-100 {
-  --tw-gradient-from: #ccfbf1;
-  --tw-gradient-to: rgb(204 251 241 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-stone-100 {
-  --tw-gradient-from: #f5f5f4;
-  --tw-gradient-to: rgb(245 245 244 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-stone-400 {
-  --tw-gradient-from: #a8a29e;
-  --tw-gradient-to: rgb(168 162 158 / 0);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
@@ -1051,10 +893,6 @@ video {
   padding: 1.5rem;
 }
 
-.p-20 {
-  padding: 5rem;
-}
-
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1065,9 +903,19 @@ video {
   padding-right: 0.75rem;
 }
 
-.py-40 {
-  padding-top: 10rem;
-  padding-bottom: 10rem;
+.py-32 {
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.py-36 {
+  padding-top: 9rem;
+  padding-bottom: 9rem;
 }
 
 .py-28 {
@@ -1075,53 +923,9 @@ video {
   padding-bottom: 7rem;
 }
 
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
-.py-14 {
-  padding-top: 3.5rem;
-  padding-bottom: 3.5rem;
-}
-
-.py-0 {
-  padding-top: 0px;
-  padding-bottom: 0px;
-}
-
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-.py-32 {
-  padding-top: 8rem;
-  padding-bottom: 8rem;
-}
-
-.pt-10 {
-  padding-top: 2.5rem;
-}
-
-.pt-20 {
-  padding-top: 5rem;
-}
-
-.pr-10 {
-  padding-right: 2.5rem;
-}
-
-.pr-20 {
-  padding-right: 5rem;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
-}
-
-.pr-32 {
-  padding-right: 8rem;
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
 }
 
 .text-center {
@@ -1206,14 +1010,14 @@ video {
   color: rgb(249 250 251 / var(--tw-text-opacity));
 }
 
-.text-indigo-600 {
+.text-smokygreen {
   --tw-text-opacity: 1;
-  color: rgb(79 70 229 / var(--tw-text-opacity));
+  color: rgb(106 128 117 / var(--tw-text-opacity));
 }
 
-.text-gray-400 {
+.text-gray-500 {
   --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .shadow-lg {
@@ -1236,11 +1040,6 @@ video {
   .dark\:bg-smokypink {
     --tw-bg-opacity: 1;
     background-color: rgb(188 156 154 / var(--tw-bg-opacity));
-  }
-
-  .dark\:text-white {
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 
   .dark\:shadow-slate-600 {
@@ -1292,6 +1091,26 @@ video {
     left: 1.25rem;
   }
 
+  .lg\:-ml-10 {
+    margin-left: -2.5rem;
+  }
+
+  .lg\:-ml-12 {
+    margin-left: -3rem;
+  }
+
+  .lg\:-ml-16 {
+    margin-left: -4rem;
+  }
+
+  .lg\:-ml-20 {
+    margin-left: -5rem;
+  }
+
+  .lg\:-ml-2 {
+    margin-left: -0.5rem;
+  }
+
   .lg\:block {
     display: block;
   }
@@ -1304,44 +1123,12 @@ video {
     height: 100vh;
   }
 
-  .lg\:h-\[\] {
-    height: ;
-  }
-
-  .lg\:h-\[cal\] {
-    height: cal;
-  }
-
-  .lg\:h-\[calc\] {
-    height: calc;
-  }
-
-  .lg\:h-\[calc\(\)\] {
-    height: calc();
-  }
-
-  .lg\:h-\[calc\(sc\)\] {
-    height: calc(sc);
-  }
-
-  .lg\:h-\[calc\(screen\)\] {
-    height: calc(screen);
-  }
-
-  .lg\:h-\[calc\(screen-72\)\] {
-    height: calc(screen-72);
-  }
-
-  .lg\:h-\[calc\(screen-72px\)\] {
-    height: calc(screen-72px);
-  }
-
-  .lg\:h-\[calc\(100vh-72px\)\] {
-    height: calc(100vh - 72px);
-  }
-
   .lg\:flex-row {
     flex-direction: row;
+  }
+
+  .lg\:pl-20 {
+    padding-left: 5rem;
   }
 }
 
